--- a/task2.html
+++ b/task2.html
@@ -22,7 +22,9 @@
         <a href="#">Экскурсии</a>
         <a href="#">Личный кабинет</a>
       </nav>
-      <h1><img src="./assets/images/title.png" alt="title" /></h1>
+      <h1>
+        <img src="./assets/images/title.png" alt="title" />
+      </h1>
       <div class="contacts">
         <a href="#"><img src="./assets/images/vk 1.png" alt="vk" /></a>
         <a href="#"><img src="./assets/images/inst 1.png" alt="instagram" /></a>
@@ -111,7 +113,7 @@
       </section>
     </div>
     <section class="gallery">
-      <h2>Галерея</h2>
+      <h2 class="h2gallery">Галерея</h2>
       <div class="photogallery">
         <img src="./assets/images/gallery1.jpg" alt="lake" class="gallery1" />
         <img
