--- a/task2.html
+++ b/task2.html
@@ -23,7 +23,15 @@
         <a href="#">Личный кабинет</a>
       </nav>
       <h1>
-        <img src="./assets/images/title.png" alt="title" />
+        <img
+          src="./assets/images/title.png"
+          srcset="
+            ./assets/images/smalltitle.png 464w,
+            ./assets/images/title.png      723w
+          "
+          sizes="(max-width:767px) 300px, 650px"
+          alt="title"
+        />
       </h1>
       <div class="contacts">
         <a href="#"><img src="./assets/images/vk 1.png" alt="vk" /></a>
